# cinder

./: .gitignore  LICENSE  Makefile  README.md  bounce.html  bounce.md  cinder.cabal  graph.html  graph.md  index.html  index.md  install.html  install.md  markup.sh  morph.html  morph.md  params.json  skeleton.html  table.html  table.md  template.html  trace.html  trace.md
examples/: .gitignore  Bouncer.hs  Bouncer.js  Bouncer.js.tmp  DomTest.hs  DomTest.js  DomTest.js.tmp  Graph.hs  Graph.js  Graph.js.tmp  Htest.hs  Htest.js  Htest.js.tmp  Morpher.hs  Morpher.js  Morpher.js.tmp  Nifty.hs  Nifty.js  Nifty.js.tmp  Table.hs  Table.js  Transformer.hs  Transformer.js  Transformer.js.tmp
src/: .gitignore
src/Cinder/: DOM.hs  DSL.hs  HTML.hs  SVG.hs
src/Control/: .gitignore  Fay.hs
src/System/: Random.hs
stylesheets/: code.css  stylesheet.css
util/: .gitignore  HTMLattributes.txt  HTMLelements.txt  SVGattributes.txt  SVGelements.txt  combos.sh
